script/config-map.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-env
  labels:
    app: nginx-env
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
