script/daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ds
spec:
  selector:
    matchLabels:
      app: nginx-lbl
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-lbl
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
