script/node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-node-selector
spec:
  nodeSelector:
    hardisk: ssd
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
