script/pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-lbl
  labels:
    mode: test
    bebas: okelah
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
