script/secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-pod
  labels:
    app: psql
spec:
  containers:
    - name: psql
      image: postgres:alpine
      ports:
        - containerPort: 5432
