script/volume-empty-dir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-volume
  labels:
    app: nginx-volume
spec:
  volumes:
    - name: templates
      emptyDir: {}
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /etc/nginx/templates
          name: templates
