script/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-lbl
  ports:
    - port: 7777
      targetPort: 80
