script/service-external-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: paralun.com
  ports:
    - port: 80
