script/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: serrvice-lb
spec:
  type: LoadBalancer
  selector:
    app: nginx-lbl
  ports:
    - port: 80
      targetPort: 80
