script/service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: nginx-lbl
  ports:
    - port: 80
      targetPort: 80
      nodePort: 3000
